[package]
name = "ouget"
version = "0.1.0"
authors = ["Regentag"]

[dependencies]
clap = "~2.19.0"
csv = "1.0.0-beta.3" # csv
regex = "0.2" # regex
reqwest = "0.6.2" # HTTP library

[dependencies.select]
git = "https://github.com/utkarshkukreti/select.rs"

# The release profile, used for 'cargo build --release'
[profile.release]
debug = false
rpath = false
lto = true
debug-assertions = false
